feat: add list campaigns and tests

--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,10 @@
             "email": "joey.mckenzie27@gmail.com"
         }
     ],
-    "repositories": [
-        {
-            "url": "../wrapkit",
-            "type": "path"
-        }
-    ],
     "require": {
         "php": ">=8.4",
-        "joeymckenzie/wrapkit": "*",
-        "nesbot/carbon": "^3.0@dev"
+        "joeymckenzie/wrapkit": "^0.1",
+        "nesbot/carbon": "^3.0"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.47",
@@ -40,9 +34,10 @@
         "phpstan/phpstan-strict-rules": "^2.0",
         "rector/rector": "^2.1",
         "mockery/mockery": "2.0.x-dev",
-        "pestphp/pest-plugin-faker": "3.x-dev"
+        "pestphp/pest-plugin-faker": "3.x-dev",
+        "vlucas/phpdotenv": "^5.6@dev"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Givebutter\\": "src/"
