--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,15 @@
             "email": "joey.mckenzie27@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "url": "../wrapkit",
+            "type": "path"
+        }
+    ],
     "require": {
         "php": ">=8.4",
-        "joeymckenzie/wrapkit": "^0.1",
+        "joeymckenzie/wrapkit": "*",
         "nesbot/carbon": "^3.0"
     },
     "require-dev": {
@@ -37,7 +43,7 @@
         "rector/rector": "^2.1",
         "vlucas/phpdotenv": "^5.6@dev"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Givebutter\\": "src/"
