deps: update back to stable

--- a/composer.json
+++ b/composer.json
@@ -14,25 +14,19 @@
             "email": "joey.mckenzie27@gmail.com"
         }
     ],
-    "repositories": [
-        {
-            "url": "../wrapkit",
-            "type": "path"
-        }
-    ],
     "require": {
         "php": ">=8.4",
-        "joeymckenzie/wrapkit": "*",
+        "joeymckenzie/wrapkit": "^0.1",
         "nesbot/carbon": "^3.0"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.47",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/pint": "^1.22",
-        "mockery/mockery": "2.0.x-dev",
+        "mockery/mockery": "^1.6",
         "peckphp/peck": "^0.1.3",
         "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-faker": "3.x-dev",
+        "pestphp/pest-plugin-faker": "^v3.0",
         "pestphp/pest-plugin-type-coverage": "^3.5",
         "pestphp/pest-plugin-watch": "^3.0",
         "phpstan/extension-installer": "^1.4",
@@ -41,9 +35,9 @@
         "phpstan/phpstan-phpunit": "^2.0",
         "phpstan/phpstan-strict-rules": "^2.0",
         "rector/rector": "^2.1",
-        "vlucas/phpdotenv": "^5.6@dev"
+        "vlucas/phpdotenv": "^5.6"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Givebutter\\": "src/"
