--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require-dev": {
         "ergebnis/composer-normalize": "^2.47",
         "guzzlehttp/guzzle": "^7.9",
-        "laravel/pint": "^1.22",
+        "laravel/pint": "^1.23",
         "mockery/mockery": "^1.6",
         "peckphp/peck": "^0.1.3",
         "pestphp/pest": "^3.8",
@@ -75,8 +75,8 @@
             "@refactor",
             "@fmt"
         ],
-        "fmt": "vendor/bin/pint",
-        "fmt:test": "vendor/bin/pint --test",
+        "fmt": "vendor/bin/pint --parallel",
+        "fmt:test": "vendor/bin/pint --test --parallel",
         "lint": "XDEBUG_MODE=off vendor/bin/phpstan analyze",
         "lint:ci": "XDEBUG_MODE=off vendor/bin/phpstan analyze --error-format=github",
         "lint:clear": "vendor/bin/phpstan clear-result-cache",
